# llmproc

./: .env.example  .gitignore  .pre-commit-config.yaml  API_REFACTOR_PLAN.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FAQ.md  HUMAN.md  MCP_SESSION_NOTES.md  MISC.md  NEXT_STEPS.md  PHILOSOPHY.md  README.md  README_NEW.md  RELEASE_NOTES.md  api_parameters.md  check_prompt.py  codemcp-usage-review.md  config.py  easy_mcp_demo.py  example.py  llm_api_test_failures.md  llms-full.txt  package-lock.json  package.json  print-system-prompt  pyproject.toml  pytest-ci.ini  pytest-min.ini  pytest.ini  release.sh  repo-map.txt  repomix-output.txt  requirements.txt  run_mcp_demo.sh  sdk_feature_changes.diff  session_report.md  session_summary.md  (+8 more)
RFC/: README.md  RFC001_file_descriptor_system.md  RFC003_file_descriptor_implementation.md  RFC004_fd_implementation_phases.md  RFC005_fd_spawn_integration.md  RFC006_response_reference_id.md  RFC007_fd_enhanced_api_design.md  RFC008_openai_reasoning_model_support.md  RFC009_program_linking_descriptions.md  RFC010_claude_thinking_model_support.md  RFC011_token_efficient_tool_use.md  RFC013_prompt_caching_implementation.md  RFC014_provider_specific_features.md  RFC014_provider_specific_features_update.md  RFC015_tool_name_error_handling.md  RFC016_provider_constants.md  RFC017_token_counting.md  RFC018_python_sdk.md  RFC018_sdk_developer_experience.md  RFC019_program_serialization.md  RFC020_convert_builtin_tools.md  RFC020_test_suite_improvements.md  RFC021_python_sdk_improvements.md  RFC022_implementation_plan.md  RFC022_tool_system_refactoring.md  RFC023_file_descriptor_manager.md  RFC024_configuration_manager.md  (+6 more)
docs/: anthropic.md  (+40 more)
(+506 files in other folders)
